k8s/adminer/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: adminer
  namespace: node-k8s
  labels:
    app: adminer
spec:
  selector:
    matchLabels:
      app: adminer
  template:
    metadata:
      labels:
        app: adminer
    spec:
      containers:
        - name: adminer
          image: adminer:latest
          ports:
            - containerPort: 8080
          resources:
            limits:
              memory: "128Mi"
              cpu: "200m"
