k8s/adminer/service.yml
apiVersion: v1
kind: Service
metadata:
  name: adminer
  namespace: node-k8s
  labels:
    app: adminer
spec:
  type: LoadBalancer
  selector:
    app: adminer
  ports:
    - port: 80
      targetPort: 8080
