k8s/adminer/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: adminer-ingress
  namespace: node-k8s
spec:
  ingressClassName: nginx
  rules:
    - host: db.localdev.me
      http:
        paths:
          - pathType: Prefix
            backend:
              service:
                name: adminer
                port:
                  number: 8080
            path: /
